src/test/ui/parser/doc-before-extern-rbrace.rs
extern {
    /// hi
    //~^ ERROR expected item after doc comment
}
